latex2mmlc/tests/snapshots/wiki_test__wiki016.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\min(x,y), \\max(x,y)"
---
<math>
    <mi>min</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>,</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
    <mo>,</mo>
    <mi>max</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>,</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
