latex2mmlc/tests/snapshots/wiki_test__wiki017.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\min x, \\max y, \\inf s, \\sup t"
---
<math>
    <mi>min</mi>
    <mi>x</mi>
    <mo>,</mo>
    <mi>max</mi>
    <mi>y</mi>
    <mo>,</mo>
    <mi>inf</mi>
    <mi>s</mi>
    <mo>,</mo>
    <mi>sup</mi>
    <mi>t</mi>
</math>
