latex2mmlc/tests/snapshots/wiki_test__wiki019.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\dim p, \\deg q, \\det m, \\ker\\phi"
---
<math>
    <mi>dim</mi>
    <mi>p</mi>
    <mo>,</mo>
    <mi>deg</mi>
    <mi>q</mi>
    <mo>,</mo>
    <mi>det</mi>
    <mi>m</mi>
    <mo>,</mo>
    <mi>ker</mi>
    <mi>ϕ</mi>
</math>
