latex2mmlc/tests/snapshots/wiki_test__wiki020.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Pr j, \\hom l, \\lVert z \\rVert, \\arg z"
---
<math>
    <mi>Pr</mi>
    <mi>j</mi>
    <mo>,</mo>
    <mi>hom</mi>
    <mi>l</mi>
    <mo>,</mo>
    <mo stretchy="false">‖</mo>
    <mi>z</mi>
    <mo stretchy="false">‖</mo>
    <mo>,</mo>
    <mi>arg</mi>
    <mi>z</mi>
</math>
