latex2mmlc/tests/snapshots/wiki_test__wiki021.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "dt, \\mathrm{d}t, \\partial t, \\nabla\\psi"
---
<math>
    <mi>d</mi>
    <mi>t</mi>
    <mo>,</mo>
    <mi mathvariant="normal">d</mi>
    <mi>t</mi>
    <mo>,</mo>
    <mi>∂</mi>
    <mi>t</mi>
    <mo>,</mo>
    <mi mathvariant="normal">∇</mi>
    <mi>ψ</mi>
</math>
