latex2mmlc/tests/snapshots/wiki_test__wiki022.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "dy/dx, \\mathrm{d}y/\\mathrm{d}x, \\frac{dy}{dx}, \\frac{\\mathrm{d}y}{\\mathrm{d}x}, \\frac{\\partial^2} {\\partial x_1\\partial x_2}y"
---
<math>
    <mi>d</mi>
    <mi>y</mi>
    <mi>/</mi>
    <mi>d</mi>
    <mi>x</mi>
    <mo>,</mo>
    <mi mathvariant="normal">d</mi>
    <mi>y</mi>
    <mi>/</mi>
    <mi mathvariant="normal">d</mi>
    <mi>x</mi>
    <mo>,</mo>
    <mfrac>
        <mrow>
            <mi>d</mi>
            <mi>y</mi>
        </mrow>
        <mrow>
            <mi>d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
    <mo>,</mo>
    <mfrac>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>y</mi>
        </mrow>
        <mrow>
            <mi mathvariant="normal">d</mi>
            <mi>x</mi>
        </mrow>
    </mfrac>
    <mo>,</mo>
    <mfrac>
        <msup>
            <mi>∂</mi>
            <mn>2</mn>
        </msup>
        <mrow>
            <mi>∂</mi>
            <msub>
                <mi>x</mi>
                <mn>1</mn>
            </msub>
            <mi>∂</mi>
            <msub>
                <mi>x</mi>
                <mn>2</mn>
            </msub>
        </mrow>
    </mfrac>
    <mi>y</mi>
</math>
