latex2mmlc/tests/snapshots/wiki_test__wiki023.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\prime, \\backprime, f^\\prime, f', f'', f^{(3)}, \\dot y, \\ddot y"
---
<math>
    <mo>′</mo>
    <mo>,</mo>
    <mo>‵</mo>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mo>′</mo>
        </mrow>
    </msup>
    <mo>,</mo>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo stretchy="false">(</mo>
            <mn>3</mn>
            <mo stretchy="false">)</mo>
        </mrow>
    </msup>
    <mo>,</mo>
    <mover>
        <mi>y</mi>
        <mo accent="true">˙</mo>
    </mover>
    <mo>,</mo>
    <mover>
        <mi>y</mi>
        <mo accent="true">¨</mo>
    </mover>
</math>
