latex2mmlc/tests/snapshots/wiki_test__wiki025.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\Im, \\imath, \\jmath, \\Bbbk, \\ell, \\mho, \\wp, \\Re, \\circledS, \\S, \\P, \\AA"
---
<math>
    <mi mathvariant="normal">ℑ</mi>
    <mo>,</mo>
    <mi>ı</mi>
    <mo>,</mo>
    <mi>ȷ</mi>
    <mo>,</mo>
    <mi>𝕜</mi>
    <mo>,</mo>
    <mi>ℓ</mi>
    <mo>,</mo>
    <mi mathvariant="normal">℧</mi>
    <mo>,</mo>
    <mi>℘</mi>
    <mo>,</mo>
    <mi mathvariant="normal">ℜ</mi>
    <mo>,</mo>
    <mi>Ⓢ</mi>
    <mo>,</mo>
    <mi mathvariant="normal">§</mi>
    <mo>,</mo>
    <mi mathvariant="normal">¶</mi>
    <mo>,</mo>
    <mi>Å</mi>
</math>
